--- a/main.html
+++ b/main.html
@@ -7,8 +7,27 @@
 </head>
 
 <body>
-	<!-- Hello workd -->
-	<!-- the entire body must be written by student -->
+	<header>
+		<nav>
+			
+				<ul>
+			<li>		
+			<a href="http://www.google.com">Home</a>
+			</li>
+			<li>
+			<a href="http://www.facebook.com">About us</a>
+			</li>
+			<li>
+			<a href="http://www.instagram.com">Contact us</a>
+			</li>
+			</ul>
+			
+		</nav>
+	        <h1>three random videos </h1>
+      <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls width="1000px" height="500px" type="./video/mp4">video 1</video><br>
+	  <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"  controls width="1000px" height="500px" type="./video/mp4">video 2</video><br>
+	  <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls width="1000px" height="500px" type="./video/mp4">video 3</video><br>
+	  </header>
     <script type="text/javascript" src="./script.js">
 </script>
 
