--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 			</ul>
 			
 		</nav>
-	        <h1>three random videos </h1>
+	        <h1>3 random videos</h1>
       <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls width="1000px" height="500px" type="./video/mp4">video 1</video><br>
 	  <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"  controls width="1000px" height="500px" type="./video/mp4">video 2</video><br>
 	  <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls width="1000px" height="500px" type="./video/mp4">video 3</video><br>
