--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body>
 	
-		<nav>
-			
+	
+			<nav>
 				<ul>
 			<li>		
 			<a href="http://www.google.com">Home</a>
@@ -23,13 +23,20 @@
 			</ul>
 			
 		</nav>
-		</header>
+		
 	        <h1>3 random videos</h1>
-      <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls width="1000px" height="500px" type="./video/mp4">video 1</video><br>
-	  <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"  controls width="1000px" height="500px" type="./video/mp4">video 2</video><br>
-	  <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls width="1000px" height="500px" type="./video/mp4">video 3</video><br>
-	  
-    <script type="text/javascript" src="./script.js">
+			<div>
+      <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls width="1000px" height="500px" type="./video/mp4">video 1</video>
+	  </div>
+	  <div>
+	  <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"  controls width="1000px" height="500px" type="./video/mp4">video 2</video>
+	  </div>
+	  <div>
+	  <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls width="1000px" height="500px" type="./video/mp4">video 3</video>
+	  </div>
+	  <script type="text/javascript" src="./script.js">
+
+
 </script>
 
 </body>
