--- a/main.html
+++ b/main.html
@@ -26,13 +26,13 @@
 		
 	        <h1>3 random videos</h1>
 			<div>
-      <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls width="1000px" height="500px" type="./video/mp4">video 1</video>
+      <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls width="1000px" height="500px" type="./video/mp4"></video>
 	  </div>
 	  <div>
-	  <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"  controls width="1000px" height="500px" type="./video/mp4">video 2</video>
+	  <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"  controls width="1000px" height="500px" type="./video/mp4"></video>
 	  </div>
 	  <div>
-	  <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls width="1000px" height="500px" type="./video/mp4">video 3</video>
+	  <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls width="1000px" height="500px" type="./video/mp4"></video>
 	  </div>
 	  <script type="text/javascript" src="./script.js">
 
