--- a/main.html
+++ b/main.html
@@ -24,15 +24,18 @@
 			
 		</nav>
 		
-	        <h1>3 random videos</h1>
+	        <header>3 random videos</header>
 		<div>
-      <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls width="1000px" height="500px" type="./video/mp4"></video>
+		<video controls width="1000px" height="500px" ></video>	
+      <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="./video/mp4"></video>
 	  </div>
 	  <div>
-	  <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"  controls width="1000px" height="500px" type="./video/mp4"></video>
+		<video controls width="1000px" height="500px"></video>
+	  <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="./video/mp4"></>
 	  </div>
 	  <div>
-	  <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls width="1000px" height="500px" type="./video/mp4"></video>
+		<video controls width="1000px" height="500px"></video>
+	  <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"  type="./video/mp4"></video>
 	  </div>
 	  <script type="text/javascript" src="./script.js">
 
